force-app/main/default/objects/bpats__Interview_Topic_Feedback__c/bpats__Interview_Topic_Feedback__c.object-meta.xml
<CustomObject>
    <label>Interview Topic Feedback</label>
    <nameField>
        <displayFormat>ITF-{00000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Topic Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>