force-app/main/default/objects/bpats__Interview_Topic_Feedback__c/fields/bpats__Feedback__c.field-meta.xml
<CustomField>
    <fullName>bpats__Feedback__c</fullName>
    <label>Feedback</label>
    <referenceTo>bpats__Interview_Feedback__c</referenceTo>
    <relationshipLabel>Interview Topic Feedbacks</relationshipLabel>
    <relationshipName>Interview_Topic_Feedbacks</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>