force-app/main/default/objects/bpats__Interview_Topic_Feedback__c/fields/bpats__Is_Additional_Topic__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Additional_Topic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Additional Topic</label>
    <type>Checkbox</type>
</CustomField>