force-app/main/default/objects/bpats__Interview_Topic_Feedback__c/fields/bpats__Topic__c.field-meta.xml
<CustomField>
    <fullName>bpats__Topic__c</fullName>
    <label>Topic</label>
    <referenceTo>bpats__Interview_Topic__c</referenceTo>
    <relationshipLabel>Interview Topic Feedbacks</relationshipLabel>
    <relationshipName>Interview_Topic_Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>