force-app/main/default/objects/bpats__Interview_Topic_Feedback__c/fields/bpats__Topic_Asked__c.field-meta.xml
<CustomField>
    <fullName>bpats__Topic_Asked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Topic Asked?</label>
    <type>Checkbox</type>
</CustomField>