force-app/main/default/objects/bpats__Interview_Topic_Feedback__c/fields/bpats__Topic_Feedback__c.field-meta.xml
<CustomField>
    <fullName>bpats__Topic_Feedback__c</fullName>
    <label>Topic Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>