force-app/main/default/objects/bpats__Interview_Topic_Feedback__c/fields/bpats__Topic_Rating__c.field-meta.xml
<CustomField>
    <fullName>bpats__Topic_Rating__c</fullName>
    <label>Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>